[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Door.gd" type="Script" id=1]
[ext_resource path="res://scenes/Hud/CoinsAlert.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/KingsAndPigs33/11-Door/door.png" type="Texture" id=3]
[ext_resource path="res://sounds/effects/enviroment/door_1.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/effects/enviroment/door_2.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Effects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.3 )
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Effects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_monster_spawn"
} ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 27.4361 )

[node name="Door" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )
coins_alert = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 3
hframes = 5
frame = 9

[node name="ani" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/close = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="CoinsAlertTMP" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 5, -35 )
scale = Vector2( 1.5, 1.5 )

[node name="Effects" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="MonsterSpawnStart" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MonsterRate" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="timeout" from="MonsterSpawnStart" to="." method="_on_MonsterSpawn_timeout"]
[connection signal="timeout" from="MonsterRate" to="." method="_on_MonsterRate_timeout"]
